--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,17 +33,18 @@ body {
 .price-block {
   position: absolute;
   bottom: 0;
-  height: 70%;
+  height: 100%;
   width: 100%;
   border-radius: 4px;
   font-size: 18px;
   color: #fff;
   text-align: center;
   padding-top: 15px;
+  transition: height 0.2s ease, background-color 0.2s ease 0.1s;
 }
 .price-block__better {
-  background: unquote("rgb(#{$palette-green-500})");
+  background-color: unquote("rgb(#{$palette-green-500})");
 }
 .price-block__worst {
-  background: unquote("rgb(#{$palette-blue-500})");
+  background-color: unquote("rgb(#{$palette-blue-900})");
 }
