--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,10 @@
 @import "~material-design-lite/material.min.css";
 @import "~material-design-lite/src/_color-definitions.scss";
+@import "~material-design-lite/src/_variables.scss";
 
 body {
-  background: #fafafa;
-  font-family: 'Roboto','Helvetica','Arial',sans-serif;
+  background: $color-white;
+  font-family: $preferred_font;
 }
 
 .mdl-grid {
@@ -22,31 +23,4 @@ body {
 
 .mdl-card__customize_values {
   padding-top: 0;
-}
-
-.price-bar {
-  height: 317px;
-  position: relative;
-  h5 {
-    margin-top: 0;
-  }
-}
-.price-block {
-  position: absolute;
-  bottom: 0;
-  height: 100%;
-  min-height: 90px;
-  width: 100%;
-  border-radius: 4px;
-  font-size: 18px;
-  color: #fff;
-  text-align: center;
-  padding-top: 15px;
-  transition: height 0.2s ease, background-color 0.2s ease 0.1s;
-}
-.price-block__better {
-  background-color: unquote("rgb(#{$palette-green-500})");
-}
-.price-block__worst {
-  background-color: unquote("rgb(#{$palette-blue-900})");
 }
