Add format generic number component

--- a/src/components/GraphComparator/Graph/style.scss
+++ b/src/components/GraphComparator/Graph/style.scss
@@ -7,6 +7,11 @@
     margin-top: 0;
   }
 }
+.price-bar-title {
+  text-transform: uppercase;
+  opacity: .8;
+  margin-bottom: 5px;
+}
 .price-block {
   position: absolute;
   bottom: 0;
