Fix some background colors

--- a/src/components/GraphComparator/Graph/style.scss
+++ b/src/components/GraphComparator/Graph/style.scss
@@ -29,5 +29,5 @@
   background-color: unquote("rgb(#{$palette-green-500})");
 }
 .price-block__worst {
-  background-color: unquote("rgb(#{$palette-blue-900})");
+  background-color: unquote("rgb(#{$palette-indigo-900})");
 }
