--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,7 +1,11 @@
 @import "~material-design-lite/src/_color-definitions.scss";
 
 .mdl-layout__header {
-  background-color: unquote("rgb(#{$palette-grey-700})") !important;
+  background-color: unquote("rgba(#{$palette-grey-700}, .5)") !important;
+}
+
+.mdl-layout-title {
+  margin-left: 16px;
 }
 
 @media screen and (max-width: 1024px) {
