--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,21 +7,43 @@ body {
   font-family: $preferred_font;
 }
 
+.mdl-layout__content > .mdl-grid {
+  margin: 0;
+}
+
 .mdl-grid {
   max-width: 800px;
   box-sizing: border-box;
   width: 100%;
 }
 
-.mdl-layout-title__centered {
-  text-align: center;
-}
-
 .mdl-card-form {
   width: 100%;
   margin-bottom: 50px;
+  background-color: rgba(255, 255, 255, .9);
 }
 
 .mdl-card__customize_values {
   padding-top: 0;
+}
+
+@media (max-width: 479px) {
+  .mdl-card-configurator {
+    margin-bottom: -8px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+
+    .mdl-card__supporting-text {
+      padding-bottom: 0;
+    }
+  }
+  .mdl-card-comparator {
+    margin-top: -8px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
+    .mdl-card__supporting-text {
+      padding-top: 0;
+    }
+  }
 }
