Add fallback white to images delay

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 @import "~material-design-lite/src/_variables.scss";
 
 body {
-  background: $color-white;
+  background: #f5f5f5;
   font-family: $preferred_font;
 }
 
