--- a/app/src/components/InputRange/InputRange.scss
+++ b/app/src/components/InputRange/InputRange.scss
@@ -1,102 +1,96 @@
-.form-group__label.input-range__label{
-	text-align: center;
-}
-
+@import 'node_modules/jeet/scss/index';
 .input-range {
 	-webkit-appearance: none;
-	margin: 10px 0;
 	width: 100%;
-}
-.input-range:focus {
-	outline: none;
+	margin: 3.8px 0;
+	&:focus {
+		outline: none;
+	}
+	&::-webkit-slider-runnable-track {
+		width: 100%;
+		height: 12.4px;
+		cursor: pointer;
+		box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+		background: rgba(54, 180, 226, 0.78);
+		border-radius: 6.4px;
+		border: 0px solid rgba(0, 0, 0, 0);
+	}
+	&::-webkit-slider-thumb {
+		box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+		border: 0px solid rgba(0, 0, 0, 0);
+		height: 20px;
+		width: 21px;
+		border-radius: 28px;
+		background: #36b4e2;
+		cursor: pointer;
+		-webkit-appearance: none;
+		margin-top: -3.8px;
+	}
+	&:focus::-webkit-slider-runnable-track {
+		background: rgba(116, 203, 235, 0.78);
+	}
+	&::-moz-range-track {
+		width: 100%;
+		height: 12.4px;
+		cursor: pointer;
+		box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+		background: rgba(54, 180, 226, 0.78);
+		border-radius: 6.4px;
+		border: 0px solid rgba(0, 0, 0, 0);
+	}
+	&::-moz-range-thumb {
+		box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+		border: 0px solid rgba(0, 0, 0, 0);
+		height: 20px;
+		width: 21px;
+		border-radius: 28px;
+		background: #36b4e2;
+		cursor: pointer;
+	}
+	&::-ms-track {
+		width: 100%;
+		height: 12.4px;
+		cursor: pointer;
+		background: transparent;
+		border-color: transparent;
+		color: transparent;
+	}
+	&::-ms-fill-lower {
+		background: rgba(26, 141, 182, 0.78);
+		border: 0px solid rgba(0, 0, 0, 0);
+		border-radius: 12.8px;
+		box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+	}
+	&::-ms-fill-upper {
+		background: rgba(54, 180, 226, 0.78);
+		border: 0px solid rgba(0, 0, 0, 0);
+		border-radius: 12.8px;
+		box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+	}
+	&::-ms-thumb {
+		box-shadow: 0px 0px 1px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+		border: 0px solid rgba(0, 0, 0, 0);
+		height: 20px;
+		width: 21px;
+		border-radius: 28px;
+		background: #36b4e2;
+		cursor: pointer;
+		height: 12.4px;
+	}
+	&:focus {
+		&::-ms-fill-lower {
+			background: rgba(54, 180, 226, 0.78);
+		}
+		&::-ms-fill-upper {
+			background: rgba(116, 203, 235, 0.78);
+		}
+	}
 }
 
-.input-range:focus::-webkit-slider-runnable-track {
-	background: #3071a9;
+.form-group__input.input-range{
+	@include column(2/3);
 }
-
-.input-range:focus::-ms-fill-lower {
-	background: #3071a9;
-}
-
-.input-range:focus::-ms-fill-upper {
-	background: #3071a9;
-}
-
-.input-range::-webkit-slider-runnable-track {
-	width: 100%;
-	height: 12px;
-	cursor: pointer;
-	animate: 0.2s;
-	box-shadow: 0px 0px 0px #000;
-	background: #3071a9;
-	border-radius: 13px;
-	border: 0px solid #000;
-}
-
-.input-range::-webkit-slider-thumb {
-	box-shadow: 1px 1px 1px #000;
-	border: 1px solid #000;
-	height: 21px;
-	width: 21px;
-	border-radius: 18px;
-	background: #fff;
-	cursor: pointer;
-	-webkit-appearance: none;
-	margin-top: -5px;
-}
-
-.input-range::-moz-range-track {
-	width: 100%;
-	height: 12px;
-	cursor: pointer;
-	animate: 0.2s;
-	box-shadow: 0px 0px 0px #000;
-	background: #3071a9;
-	border-radius: 13px;
-	border: 0px solid #000;
-}
-
-.input-range::-moz-range-thumb {
-	box-shadow: 1px 1px 1px #000;
-	border: 1px solid #000;
-	height: 21px;
-	width: 21px;
-	border-radius: 18px;
-	background: #fff;
-	cursor: pointer;
-}
-
-.input-range::-ms-track {
-	width: 100%;
-	height: 12px;
-	cursor: pointer;
-	animate: 0.2s;
-	background: transparent;
-	border-color: transparent;
-	color: transparent;
-}
-
-.input-range::-ms-fill-lower {
-	background: #3071a9;
-	border: 0px solid #000;
-	border-radius: 26px;
-	box-shadow: 0px 0px 0px #000;
-}
-
-.input-range::-ms-fill-upper {
-	background: #3071a9;
-	border: 0px solid #000;
-	border-radius: 26px;
-	box-shadow: 0px 0px 0px #000;
-}
-
-.input-range::-ms-thumb {
-	box-shadow: 1px 1px 1px #000;
-	border: 1px solid #000;
-	height: 21px;
-	width: 21px;
-	border-radius: 18px;
-	background: #fff;
-	cursor: pointer;
+.input-range__display{
+	@include column(1/3);
+	font-size: 20px
 }
