--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=1">
 </head>
 <body>
 <div id="app"><%- app %></div>
