--- a/app/src/assets/scss/general/_form.scss
+++ b/app/src/assets/scss/general/_form.scss
@@ -1,3 +1,5 @@
+@import '_variable';
+
 .form-group {
 	@include column(1, $cycle:1);
 	padding-bottom: 10px;
@@ -6,7 +8,9 @@
 		@include span(1);
 	}
 	&__label{
-		padding-bottom: 10px;
+		padding-bottom: 30px;
+		font-size: 18px;
+		color: $blackColor;
 	}
 
 }
