--- a/app/src/views/home/Home.scss
+++ b/app/src/views/home/Home.scss
@@ -1,14 +1,21 @@
 @import 'node_modules/jeet/scss/index';
 .home__titel{
 	width: 100%;
-	font-size: 30px;
+	font-size: 45px;
+	font-weight: 700;
 	margin-bottom: 20px;
 }
 
 .home__wrapper-ranger{
 	border: 1px solid black;
-	padding: 20px 10px;
+	padding: 40px 20px;
 	margin-top: 30px;
 	border-radius: 2px;
 	@include span(1);
+	.form-group{
+		padding-bottom: 45px;
+		&:last-child{
+			padding-bottom: 0;
+		}
+	}
 }
