--- a/app/src/views/home/Home.scss
+++ b/app/src/views/home/Home.scss
@@ -1,4 +1,5 @@
 @import 'node_modules/jeet/scss/index';
+@import '../../assets/scss/general/_variable';
 .home__titel {
 	width: 100%;
 	font-size: 45px;
@@ -7,7 +8,7 @@
 }
 
 .home__wrapper-ranger {
-	border: 1px solid black;
+	border: 1px solid $blackColor;
 	padding: 40px 20px;
 	margin-top: 20px;
 	border-radius: 2px;
