--- a/app/src/components/Chart/Chart.scss
+++ b/app/src/components/Chart/Chart.scss
@@ -2,17 +2,15 @@
 @import '../../assets/scss/general/_variable';
 .chart__wrapper {
 	@include span(1);
-	position: relative;
 	bottom: 0;
 	display: flex;
-	align-items: flex-end;
+	align-items:flex-end;
 	height: 100%;
 }
 
 .chart__column {
-	flex-direction: column;
 	height: 0;
-	min-height: 8%;
+	min-height: 12%;
 	@include column(1/2);
 	transition: height 2s,background 3s;
 	border-top-left-radius: 3px;
@@ -23,8 +21,8 @@
 	&-cheap {
 		background: $blueColor;
 	}
-	color: white;
+	color: $blackColor;
 	padding-top: 10px;
-	font-weight: 400;
 	text-align: center;
+	font-size: 18px;
 }
