--- a/src/assets/styles/settings/typography.scss
+++ b/src/assets/styles/settings/typography.scss
@@ -1,4 +1,5 @@
 $mainFont: 'Helvetica', 'sans-serif';
+$secondaryFont: 'Georgia', 'sans-serif';
 
 $font-weight-light: 300;
 $font-weight-regular: 400;
