--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,15 @@
 .app {
-  text-align: center;
+  .app-body {
+    width: 100%;
+    max-width: 1100px;
+    padding: 0 20px;
+    margin: 60px auto;
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .app-body-half {
+    width: 50%;
+    padding: 0 20px;
+  }
 }
