--- a/src/components/AppHero/AppHero.scss
+++ b/src/components/AppHero/AppHero.scss
@@ -1,6 +1,7 @@
 .app-hero {
   background: #fff url('./../../assets/images/cobertura.jpg') no-repeat center center;
-  padding: 50px 0;
+  padding: 10px 0;
+  text-align: center;
   position: relative;
   background-size: cover;
 
