--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,12 +4,27 @@
     max-width: 1100px;
     padding: 0 20px;
     margin: 60px auto;
+    position: relative;
     display: flex;
-    align-items: flex-start;
+    align-items: flex-end;
+  }
+
+  .app-body-half-right {
+    height: 100%;
+    position: absolute;
+    width: 50%;
+    right: 0;
   }
 
   .app-body-half {
     width: 50%;
     padding: 0 20px;
+  }
+
+  .main-footer {
+    margin-top: 80px;
+    background: $lightGrey;
+    min-height: 50px;
+    width: 100%;
   }
 }
