--- a/src/components/SliderRange/SliderRange.scss
+++ b/src/components/SliderRange/SliderRange.scss
@@ -1,5 +1,5 @@
 :global(.rc-slider) {
-  margin: 0 12px;
+  margin: 0;
 }
 
 :global(.rc-slider-handle) {
@@ -27,6 +27,10 @@
 
 .slider-container {
   margin: 30px 0;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .slider-ui-container {
