--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -7,6 +7,24 @@
     position: relative;
     display: flex;
     align-items: flex-end;
+
+    @media screen and (max-width: $belowTablet) {
+      align-items: flex-end;
+      flex-direction: column;
+      padding: 0 10px;
+      margin: 20px auto;
+    }
+  }
+
+  .app-body-half {
+    width: 50%;
+    padding: 0 20px;
+
+    @media screen and (max-width: $belowTablet) {
+      width: 100%;
+      margin-bottom: 60px;
+      padding: 0;
+    }
   }
 
   .app-body-half-right {
@@ -14,11 +32,13 @@
     position: absolute;
     width: 50%;
     right: 0;
-  }
 
-  .app-body-half {
-    width: 50%;
-    padding: 0 20px;
+    @media screen and (max-width: $belowTablet) {
+      position: relative;
+      height: 0;
+      min-height: 300px;
+      width: 100%;
+    }
   }
 
   .main-footer {
