--- a/src/components/UserForm/UserForm.scss
+++ b/src/components/UserForm/UserForm.scss
@@ -1,7 +1,11 @@
 .select-state-container {
   .select-state-label {
     font-weight: $font-weight-light;
-    @include fontSize(26px);
+    @include fontSize(24px);
+
+    @media screen and (max-width: $belowTablet) {
+      @include fontSize(18px);
+    }
   }
 
   :global(.Select-control) {
@@ -15,7 +19,11 @@
   :global(.Select--single .Select-control .Select-value) {
     line-height: 60px;
     font-weight: $font-weight-semi-bold;
-    @include fontSize(30px);
+    @include fontSize(24px);
+
+    @media screen and (max-width: $belowTablet) {
+      @include fontSize(18px);
+    }
   }
 
   :global(.Select-option.is-focused) {
@@ -33,8 +41,12 @@
     margin: 0;
     width: 100% !important;
     line-height: 60px;
-    @include fontSize(30px);
+    @include fontSize(26px);
     font-weight: $font-weight-semi-bold;
+
+    @media screen and (max-width: $belowTablet) {
+      @include fontSize(18px);
+    }
   }
 
   :global(.is-focused:not(.is-open) .Select-control) {
