Try out loanjs as a library for compound interest

--- a/src/components/SliderRange/SliderRange.scss
+++ b/src/components/SliderRange/SliderRange.scss
@@ -78,9 +78,11 @@
 .value-prefix {
   margin-right: 3px;
   display: inline-block;
+  font-weight: $font-weight-light;
 }
 
 .value-sufix {
   margin-left: 3px;
   display: inline-block;
+  font-weight: $font-weight-light;
 }
