feat(StateSelect): creates StateSelect
- models data from state service
- creates IStore interface]
- adds generals style
- creates simulationAction and SimulatorReducer

--- a/app/src/assets/scss/variables.scss
+++ b/app/src/assets/scss/variables.scss
@@ -1,4 +1,7 @@
 @import './fonts.scss';
 
 $font-default: 'Dosis';
-$main-color: #ffffff;
+$main-color: #008000;
+$border-color: #a9a9a9;
+$active-border-color: $main-color;
+$input-color: #555;
