--- a/app/src/assets/scss/reset.scss
+++ b/app/src/assets/scss/reset.scss
@@ -2,3 +2,10 @@ body {
   margin: 0;
   padding: 0;
 }
+h1, h2, h3, {
+  font-weight: normal;
+  margin: 0;
+}
+input, select {
+  outline: none;
+}
