--- a/app/src/views/home/home.scss
+++ b/app/src/views/home/home.scss
@@ -1,8 +1,12 @@
 @import '../../assets/scss/variables';
 
 .main-section {
-    color: green;
+    color: $main-color;
     padding: 10px;
     font-family: $font-default;
     font-size: 30px;
+}
+.title {
+    margin: 30px 0;
+    font-size: 40px;
 }
