--- a/app/src/components/StateSelect/stateSelect.scss
+++ b/app/src/components/StateSelect/stateSelect.scss
@@ -10,6 +10,8 @@ $select-padding: 10px;
   background: none;
   border-color: $border-color;
   color: $input-color;
+  margin: 0 auto;
+  font-size: 16px;
   &:focus {
     border-color: $active-border-color;
     color: $main-color;
