--- a/app/src/views/home/home.scss
+++ b/app/src/views/home/home.scss
@@ -1,10 +1,16 @@
 @import '../../assets/scss/variables';
 
 .main-section {
+    background: #fff;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
     color: $main-color;
-    padding: 10px;
+    padding: 30px;
     font-family: $font-default;
     font-size: 30px;
+    text-align: center;
+    max-width: 1100px;
+    margin: 50px auto;
 }
 .title {
     margin: 30px 0;
