feat(InputRange): creates input Range
- Adds numeraljs to maks numbers
- changes project fonts
- creates maskConfig and rangeConfig

--- a/app/src/assets/scss/fonts.scss
+++ b/app/src/assets/scss/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Dosis';
-    src: local('Dosis Light'),
-        local('Dosis-Light'),
-        url(https://fonts.gstatic.com/s/dosis/v6/7aJzV14HzAOiwNTiPgucGfesZW2xOQ-xsNqO47m55DA.woff2)
+    src: local('Josefin Sans Light'), 
+        local('JosefinSans-Light'),
+        url(https://fonts.gstatic.com/s/josefinsans/v11/C6HYlRF50SGJq1XyXj04z04GofcKVZz6wtzX_QUIqsI.woff2)
         format('woff2');
 }
