--- a/app/src/views/home/home.scss
+++ b/app/src/views/home/home.scss
@@ -7,7 +7,7 @@
     color: $main-color;
     padding: 30px;
     font-family: $font-default;
-    font-size: 30px;
+    font-size: 28px;
     text-align: center;
     max-width: 1100px;
     margin: 50px auto;
@@ -15,4 +15,8 @@
 .title {
     margin: 30px 0 60px;
     font-size: 40px;
+}
+.sub-title {
+    margin: 30px 0;
+    font-size: 34px;
 }
