--- a/src/components/barChart/barchart.css
+++ b/src/components/barChart/barchart.css
@@ -2,28 +2,41 @@
 	position: relative;
 	max-width: 400px;
 	margin: 60px auto;
-	max-height: 250px;
-	min-height: 250px;
-	height: 250px;
+	height: 200px;
+	max-height: 200px;
+	min-height: 200px;
+	/* overflow: hidden; */
+
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-end;
+}
+
+.barchart__title {
+	width: 100%;
 }
 
 .barchart__bar {
-	position: absolute;
+	min-height: 35px;
+	/*position: absolute;*/
 	bottom: 0;
-	width: 190px;
+	width: 50%;
+	box-sizing: border-box;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	-webkit-transition: height 0.5s;
+    transition: height 0.5s;
 
 	background: #3f51b5;
 	background: -moz-linear-gradient(top, #3f51b5 0%, #2e44b2 100%);
 	background: -webkit-linear-gradient(top, #3f51b5 0%,#2e44b2 100%);
 	background: linear-gradient(to bottom, #3f51b5 0%,#2e44b2 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#2e44b2',GradientType=0 );
-
 	color: white;
 }
 
 .barchart__bar:last-of-type {
 	right: 0;
+	float: right;
 }
 
