--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import './assets/style/reset.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 .App {
   text-align: center;
 }
@@ -25,4 +28,8 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+body {
+	font-family: 'Roboto';
 }
