--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,5 @@
-@import './assets/style/reset.css';
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
 }
 
 .App-header {
@@ -15,21 +7,29 @@
   height: 150px;
   padding: 20px;
   color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2.5em;
+  color: #A948CC;
 }
 
-.App-intro {
-  font-size: large;
+.app__form label {
+	font-size: 1.5em;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.app__form select {
+	font-size: 1.5em;
+	margin-left: 10px;
 }
 
-body {
-	font-family: 'Roboto';
+h2 {
+	font-size: 1.3em;
+	line-height: 2;
+	margin-bottom: 20px;
+	color: #3C4455;
 }
+
