--- a/src/components/barChart/barchart.css
+++ b/src/components/barChart/barchart.css
@@ -1,7 +1,7 @@
 .barchart {
 	max-width: 400px;
-	margin: 60px auto 0;
-	height: 200px;
+	margin: 60px 20px 0;
+	height: 300px;
 
 	display: flex;
 	flex-wrap: wrap;
@@ -9,14 +9,17 @@
 	justify-content: space-around;
 }
 
-.barchart__title { width: 100%; }
+.barchart__title {
+	width: 100%;
+	margin: 30px 0;
+	font-size: 1.3em;
+}
 
 .barchart__bar {
-	min-height: 35px;
+	min-height: 65px;
 	width: 45%;
 	box-sizing: border-box;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding: 10px 5px;
 	-webkit-transition: height 0.5s;
 	transition: height 0.5s;
 	border-radius: 10px 10px 0 0;
@@ -27,4 +30,11 @@
 	background: linear-gradient(to bottom, #3f51b5 0%,#2e44b2 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#2e44b2',GradientType=0 );
 	color: white;
+
+	font-size: 1.25em;
+    line-height: 1.4;
+}
+
+@media screen and (min-width: 768px) {
+	.barchart { margin: 60px auto 0}
 }
