--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,19 @@
+@import './assets/style/reset.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto';
+  font-size: 16px;
 }
 
 .container {
 	max-width: 800px;
-	margin: auto;
+	margin: 60px 20px;
 }
+
+@media screen and (min-width: 768px) {
+	.container { margin: 60px auto }
+}
+
