--- a/src/components/barChart/barchart.css
+++ b/src/components/barChart/barchart.css
@@ -28,7 +28,7 @@
 	background: -moz-linear-gradient(top, #3f51b5 0%, #2e44b2 100%);
 	background: -webkit-linear-gradient(top, #3f51b5 0%,#2e44b2 100%);
 	background: linear-gradient(to bottom, #3f51b5 0%,#2e44b2 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#2e44b2',GradientType=0 );
+	/* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f51b5', endColorstr='#2e44b2',GradientType=0 ); */
 	color: white;
 
 	font-size: 1.25em;
